[package]
name = "dioxus-prism"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "Render math with KaTeX in Yew!"
repository = "https://github.com/GalAster/yew-katex"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
dioxus = "0.1.8"
prism-wasmbind = {version = "0.1.0", path = "../prism-wasm" }

[dev-dependencies]


[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
