[package]
name = "dioxus-prism"
version = "0.2.0"
authors = ["Aster <192607617@qq.com>"]
description = "Render with prismjs in dioxus!"
repository = "https://github.com/oovm/prism-wasm"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
dioxus = "0.2.3"
prism-wasmbind = {version = "0.2.1", path = "../prism-wasm" }

[dev-dependencies]


[features]
default = []

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
