[package]
name = "prism-preview"
publish = false
version = "1.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "Render math with KaTeX in Yew!"
repository = "https://github.com/GalAster/yew-katex"
readme = "readme.md"
license = "MPL-2.0"
edition = "2018"

[dependencies]
log = "0.4.14"
wasm-logger = "0.2.0"
dioxus = { version = "0.1.8", features = ["web"] }
dioxus-prism = { version = "*", path = "../prism-dioxus" }
macrowind = "0.1.1"


[dev-dependencies]
