[package]
name = "prism-wasmbind"
version = "0.1.0"
authors = ["Aster <galaster@foxmail.com>"]
description = "Prismjs Render for wasm bind"
repository = "https://github.com/oovm/prism-wasm"
license = "MPL-2.0"
readme = "Readme.md"
edition = "2021"
include = ["/src/**/*", "Readme.md"]
# exclude = ["/tests/*", "/.idea/*", "/benches/*"]

[dependencies]
#serde = "1.0.136"
#serde_derive = "1.0.136"

[dependencies.wasm-bindgen]
version = "0.2.79"
features = ["serde-serialize"]

[dev-dependencies]
wasm-bindgen-test = "0.3.29"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wee]
t = "cargo test"
p = "cargo publish --allow-dirty"
